; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_fib_rules.c_fib_rule_nlmsg_size.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_fib_rules.c_fib_rule_nlmsg_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fib_rules_ops = type { i64 (%struct.fib_rule*)* }
%struct.fib_rule = type opaque
%struct.fib_rule.0 = type { i32 }

@IFNAMSIZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.fib_rules_ops*, %struct.fib_rule.0*)* @fib_rule_nlmsg_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @fib_rule_nlmsg_size(%struct.fib_rules_ops* %0, %struct.fib_rule.0* %1) #0 {
  %3 = alloca %struct.fib_rules_ops*, align 8
  %4 = alloca %struct.fib_rule.0*, align 8
  %5 = alloca i64, align 8
  store %struct.fib_rules_ops* %0, %struct.fib_rules_ops** %3, align 8
  store %struct.fib_rule.0* %1, %struct.fib_rule.0** %4, align 8
  %6 = call i64 @NLMSG_ALIGN(i32 4)
  %7 = load i32, i32* @IFNAMSIZ, align 4
  %8 = call i64 @nla_total_size(i32 %7)
  %9 = add i64 %6, %8
  %10 = call i64 @nla_total_size(i32 4)
  %11 = add i64 %9, %10
  %12 = call i64 @nla_total_size(i32 4)
  %13 = add i64 %11, %12
  %14 = call i64 @nla_total_size(i32 4)
  %15 = add i64 %13, %14
  %16 = call i64 @nla_total_size(i32 4)
  %17 = add i64 %15, %16
  store i64 %17, i64* %5, align 8
  %18 = load %struct.fib_rules_ops*, %struct.fib_rules_ops** %3, align 8
  %19 = getelementptr inbounds %struct.fib_rules_ops, %struct.fib_rules_ops* %18, i32 0, i32 0
  %20 = load i64 (%struct.fib_rule*)*, i64 (%struct.fib_rule*)** %19, align 8
  %21 = icmp ne i64 (%struct.fib_rule*)* %20, null
  br i1 %21, label %22, label %31

22:                                               ; preds = %2
  %23 = load %struct.fib_rules_ops*, %struct.fib_rules_ops** %3, align 8
  %24 = getelementptr inbounds %struct.fib_rules_ops, %struct.fib_rules_ops* %23, i32 0, i32 0
  %25 = load i64 (%struct.fib_rule*)*, i64 (%struct.fib_rule*)** %24, align 8
  %26 = load %struct.fib_rule.0*, %struct.fib_rule.0** %4, align 8
  %27 = bitcast %struct.fib_rule.0* %26 to %struct.fib_rule*
  %28 = call i64 %25(%struct.fib_rule* %27)
  %29 = load i64, i64* %5, align 8
  %30 = add i64 %29, %28
  store i64 %30, i64* %5, align 8
  br label %31

31:                                               ; preds = %22, %2
  %32 = load i64, i64* %5, align 8
  ret i64 %32
}

declare dso_local i64 @NLMSG_ALIGN(i32) #1

declare dso_local i64 @nla_total_size(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
